--- a/src/main/resources/com/example/hangedgame/Game-view.fxml
+++ b/src/main/resources/com/example/hangedgame/Game-view.fxml
@@ -1,69 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="524.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hangedgame.controller.GameController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hangedgame.controller.GameController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="370.0" minWidth="10.0" prefWidth="325.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="275.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="473.0" minWidth="10.0" prefWidth="421.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="214.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="141.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="282.0" minHeight="10.0" prefHeight="180.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="233.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="292.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="326.0" minHeight="0.0" prefHeight="255.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="326.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <HBox alignment="CENTER" prefHeight="114.0" prefWidth="684.0" style="-fx-background-color: grey; -fx-border-color: BLACK;" GridPane.columnSpan="2">
+      <HBox alignment="CENTER" prefHeight="69.0" prefWidth="635.0" style="-fx-background-color: grey; -fx-border-color: BLACK;" GridPane.columnSpan="2">
          <children>
-            <Label alignment="CENTER" prefHeight="36.0" prefWidth="328.0" style="-fx-border-color: black; -fx-border-radius: 20; -fx-background-color: white; -fx-background-radius: 20;" text="JUEGO DE EL AHORCADO" textFill="#110101">
+            <Label alignment="CENTER" prefHeight="36.0" prefWidth="431.0" style="-fx-border-color: black; -fx-border-radius: 20; -fx-background-color: white; -fx-background-radius: 20;" text="JUEGO DE EL AHORCADO" textFill="#110101">
                <font>
-                  <Font name="Cambria Bold" size="27.0" />
+                  <Font name="Goudy Old Style" size="27.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <children>
-            <ImageView fx:id="HangedRoll" fitHeight="168.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/0.png" />
-               </image>
-            </ImageView>
-         </children>
-      </VBox>
-      <Button mnemonicParsing="false" onAction="#buttonTest" text="Button" GridPane.rowIndex="2" />
-      <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+      <BorderPane prefHeight="238.0" prefWidth="635.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <center>
-            <HBox fx:id="hBoxCenter" alignment="CENTER" prefHeight="103.0" prefWidth="343.0" BorderPane.alignment="CENTER" />
+            <HBox fx:id="hBoxCenter" alignment="CENTER" prefHeight="190.0" prefWidth="417.0" spacing="10.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER" />
          </center>
          <bottom>
-            <VBox alignment="CENTER" fillWidth="false" prefHeight="85.0" prefWidth="343.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="92.0" prefWidth="635.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
                <children>
-                  <Label text="Digite una letra" textFill="WHITE">
+                  <TextField fx:id="leterTextField" alignment="CENTER" layoutX="299.0" layoutY="31.0" onKeyTyped="#handleKeyTypedEvent" prefHeight="25.0" prefWidth="38.0" />
+                  <Button fx:id="verify" layoutX="353.0" layoutY="6.0" mnemonicParsing="false" onAction="#onHandlerButtonVerify" style="-fx-border-color: grey; -fx-border-radius: 20; -fx-background-radius: 20;" text="Verificar">
                      <font>
-                        <Font size="18.0" />
+                        <Font name="Goudy Old Style" size="15.0" />
+                     </font></Button>
+                  <Button fx:id="Eraser" layoutX="355.0" layoutY="56.0" mnemonicParsing="false" onAction="#onHandlerButtonEraser" prefHeight="31.0" prefWidth="71.0" style="-fx-border-color: grey; -fx-border-radius: 20; -fx-background-radius: 20;" text="Borrar">
+                     <font>
+                        <Font name="Goudy Old Style" size="15.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </Button>
+                  <Label layoutX="148.0" layoutY="31.0" text="Digite una letra" textFill="WHITE">
+                     <font>
+                        <Font name="Goudy Old Style" size="22.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="leterTextField" onKeyTyped="#handleKeyTypedEvent" prefHeight="25.0" prefWidth="38.0" />
-                  <Button fx:id="Eraser" mnemonicParsing="false" onAction="#onHandlerButtonEraser" text="Borrar">
+               </children>
+            </AnchorPane>
+         </bottom>
+         <right>
+            <AnchorPane prefHeight="190.0" prefWidth="214.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
+               <children>
+                  <ImageView fx:id="HangedPos" fitHeight="155.0" fitWidth="207.0" layoutX="30.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/0.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+         </right>
+      </BorderPane>
+      <GridPane GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Intentos Restantes">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+               <font>
+                  <Font name="Goudy Old Style Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="CountLife" style="-fx-border-color: black;" text="6" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets bottom="1.0" left="10.0" right="10.0" top="1.0" />
+               </padding>
+            </Label>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+               <children>
+                  <Label text="¡Ayuda!">
                      <font>
-                        <Font name="Book Antiqua" size="12.0" />
+                        <Font name="Gill Sans MT Condensed" size="18.0" />
                      </font>
+                  </Label>
+                  <Button fx:id="ButtonHelp" mnemonicParsing="false" onAction="#onHandleButtonHelp" prefHeight="40.0" prefWidth="34.0" style="-fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20; -fx-background-color: grey;" text="?" textFill="WHITE">
+                     <font>
+                        <Font name="Rockwell Extra Bold" size="20.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
                   </Button>
                </children>
-            </VBox>
-         </bottom>
-      </BorderPane>
+            </HBox>
+         </children>
+      </GridPane>
+      <TextArea fx:id="MesaggeArea" prefHeight="200.0" prefWidth="200.0" promptText="En espera de estado..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
 </GridPane>
